[metadata]
name = keystone_rxt
summary = OpenStack Identity plugin for Rackspace Technologies
description_file = README.md
long_description_content_type = text/markdown
author = Kevin Carter
author_email = kevin.carter@rackspace.com
home_page = https://github.com/rackerlabs/keystone-rxt
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11

[files]
packages =
    keystone_rxt

[compile_catalog]
directory = keystone/locale
domain = keystone

[entry_points]
keystone.auth.password =
    rxt = keystone_rxt.rackspace:RXTPassword

keystone.auth.totp =
    rxt = keystone_rxt.rackspace:RXTTOTP
